<resources>
    <string name="app_name">TPLaboratorioV</string>

    <!--Login-->
    <string name="login_Titulo">Login de Usuario</string>
    <string name="login_Subtitulo">Bienvenido a la primer aplicación \nBuffet-UTN</string>
    <string name="login_Mail">Mail</string>
    <string name="login_Clave">Clave</string>
    <string name="login_h_Mail">Ingrese Mail</string>
    <string name="login_h_Clave">Ingrese Clave</string>
    <string name="login_b_Ingresar">Ingresar</string>
    <string name="login_o">ó</string>
    <string name="login_b_Registrarme">Registrarme</string>

    <!--Registro-->
    <string name="registro_Nombre">Nombre</string>
    <string name="registro_Apellido">Apellido</string>
    <string name="registro_DNI">DNI</string>
    <string name="registro_Mail">Mail</string>
    <string name="registro_Clave">Clave</string>
    <string name="registro_Reomgreso">Re-\ningrese</string>
    <string name="registro_b_Registrarme">Registrarme</string>
    <string name="registro_h_Nombre">Juan</string>
    <string name="registro_h_Apellido">Pelotas</string>
    <string name="registro_h_DNI">DNI / CUIL</string>
    <string name="registro_h_Mail">Ingrese Mail</string>
    <string name="registro_h_Clave">Ingrese Clave</string>
    <string name="registro_h_Reomgreso">Reingrese Clave</string>

    <!--Menu-->
    <string name="menu_Titulo">Pidiendo...</string>
    <string name="menu_Estimado">Importe\nEstimado:</string>
    <string name="menu_Seleccionados">Elementos Seleccionados:</string>
    <string name="menu_b_Enviar">Enviar Pedido</string>
    <string name="menu_tv_Precio">0.00</string>
    <string name="menu_tv_Seleccionados">0</string>

    <!--Pedido-->
    <string name="pedido_Titulo">Mi Pedido</string>
    <string name="pedido_Estimado">Importe\nEstimado:</string>
    <string name="pedido_Seleccionados">Elementos Seleccionados:</string>
    <string name="pedido_b_Enviar">Enviar Pedido</string>
    <string name="pedido_tv_Precio">0.00</string>
    <string name="pedido_tv_Seleccionados">0</string>

    <!--Mensajes de dialogo-->
    <string name="registro_Nuevo">Felicitaciones!!/nUsted se ha registrado!</string>
    <string name="registro_OtroMail">Lo sentimos, pruebe con otro Mail</string>
    <string name="registro_ConfirmeClave">Vuelva a confirmar su Clave</string>
    <string name="registro_IngreseMail">Se debe ingresar un mail</string>
    <string name="registro_Complete">Complete TODOS los campos pls xd</string>

    <string name="pedido_dialogo_ErrorPedido">Su pedido está vacio o no pudo ser procesado</string>
    <string name="pedido_dialogo_PedidoEnviado">Su pedido ha sido procesado !</string>
    <string name="pedido_dialogo_Precio">"Precio total: $ "</string>
    <string name="pedido_dialogo_Seleccionados">Total items: </string>

    <!--Items Recycler View-->
    <string name="item_SinDescripcion">Sin Descripcion</string>
    <string name="item_Precio">0.00</string>

    <!--Options Menu's-->
    <string name="menu_options_menu_b_verPedido">Ver Pedido</string>
    <string name="options_menu_b_logout">Logout</string>
    <string name="pedido_options_menu_b_enviarPedido">Enviar Pedido</string>
    <string name="pedido_options_menu_b_limpiarPedido">Limpiar Pedido</string>
</resources>
